# WSVPortfolio

./: LICENSE  README.md
WSVPortfolio/: .gitignore  README.md  pyproject.toml  setup.py
WSVPortfolio/.github/: copilot-instructions.md
WSVPortfolio/scripts/: generate_api_examples.py
WSVPortfolio/src/WSVPortfolio/: __init__.py
WSVPortfolio/src/borsdata_client/: __init__.py  client.py  models.py
WSVPortfolio/tests/: test_basic.py
